# 2022-robot-code

./: .gitignore  ARCHITECTURE.md  README.md
.github/workflows/: main.yml
ballvision/: __init__.py
highgoal/: __init__.py  docs.md  high_goal.py  pipeline.py  rectangle.py  target_scoring.py
julia/: identification_script.jl
liverecord/backend/: app.py  pyproject.toml  quickrun.py  quickrun2.py  requirements.txt
liverecord/frontend/: package-lock.json  package.json
liverecord/frontend/src/: App.svelte  app.css  highcharts.ts
pid-solver/: pid.py
raspi-vision/: runCamera  uploaded_tf2.py  vision-config.json
robot/: .gitignore  build.gradle  networktables.ini  networktables.ini.bak  simgui.json  sysid-config.json  sysid_data20220131-192846.json  sysid_data20220131-194458.json
robot/.wpilib/: wpilib_preferences.json
robot/src/main/kotlin/frc/robot/: ClimberTestContainer.kt  Constants.kt  Main.kt  Robot.kt  RobotContainer.kt  Shoot.kt  climber.md  controls.md
robot/src/main/kotlin/frc/robot/commands/: ArcadePIDDrive.kt  ArcadePIDDriveOld.kt  AutoIntake.kt  CheckVisionOrRumble.kt  Climb.kt  ClimbXMeters.kt  DebugClimbingCommand.kt  DebugCommands.kt  DebugDrive.kt  DebugDriveOld.kt  DrivetrainCommands.kt  DrivetrainCommandsOld.kt  ElevationCommand.kt  ElevatorClimbCommand.kt  ExampleCommand.kt  ExamplePneumaticCommandForward.kt  FixedBallMotorSpeed.kt  FixedIndexerSpeed.kt  FixedShooterSpeed.kt  FixedWinchSpeed.kt  GateSensored.kt  GenericPneumaticCommand.kt  LimitedWinchCommand.kt  Pneumatic.kt  Shoot.kt  ShootBallMotor.kt  ShooterBangBang.kt  ShooterLQR.kt  ShooterPID.kt  TankDriveCommand.kt  TurnToAngle.kt  TurnToBall.kt  WinchPIDCommand.kt  WinchTrapezoidalCommand.kt  test.kt
robot/src/main/kotlin/frc/robot/subsystems/: BallMotorSubsystem.kt  BallVisonJSON.kt  ClimberSubsystem.kt  CompressorSubsystem.kt  DrivetrainOldSubsystem.kt  DrivetrainSubsystem.kt  DrivetrainSubsystemOld.kt  ExamplePneumaticSubsystem.kt  ExampleSubsystem.kt  GenericSolenoidSubsystem.kt  IndexerSubsystem.kt  IntakeSubsystem.kt  ShooterElevationSubsystem.kt  ShooterSubsystem.kt  SolenoidSubsystem.kt  SparkShooterSubsystem.kt  WinchSubsystem.kt
vision/: .installer_config  README.md  __init__.py  build.gradle  config.development.json  config.robot.json  main.py  pyproject.toml  requirements.txt  runCamera.sh  settings.gradle  vision-config.json
vision/BallVision/: __init__.py
vision/HighGoal/: __init__.py  pipeline.py
vision/ball_vision/: ball_vision.py  label_map.pbtxt  old_ball_vision.py  stream_client.py  test_model.py
vision/common/: VisionInstance.py  VisionLayer.py  __init__.py
vision/high_goal/: CMakeLists.txt  Makefile  README.md  camera_calibration.cpp  camera_config.xml  camera_distort.cpp  camera_distort.hpp  cs_main.cpp  frc_high_goal.json  high_goal.cpp  high_goal.hpp  high_goal_pipeline.cpp  high_goal_pipeline.hpp  high_goal_vision  main.cpp  rectangle.py  vision_test.cpp
vision/high_goal/sample_images/: Details.txt
vision/high_goal_python/: docs.md  high_goal.py  pipeline.py  rectangle.py  target_scoring.py
vision/src/main/kotlin/: BallVision.kt
vison-remote/: app.py  pyproject.toml
