[tool.poetry]
name = "vision"
version = "0.1.0"
description = "Computer vision for 2036"
authors = ["Fairview Robotics <fairviewrobotics@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.23.2"
opencv-python = "^4.6.0"
pynetworktables = "^2021.0.0"
tflite-runtime = { file = "BallVision/tflite_runtime-2.5.0-cp35-cp35m-linux_x86_64.whl", platform="linux" }
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
