[tool.poetry]
name = "visionremotedebug"
version = "0.1.0"
description = "For remote debugging of vision"
authors = ["Tech0tron Roblox <tech0tron.roblox@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.6.0"
imagezmq = "^1.1.1"
numpy = "^1.23.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
