[tool.poetry]
name = "liverecord-backend"
version = "0.1.0"
description = ""
authors = ["Fairview Robotics <fairviewrobotics@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
flask = "2.2.2"
flask-cors="3.0.10"
flask-socketio="5.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
